doc fix in example

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ table.concat( list [, sep [, i [, j]]] ) ==&gt; string
 
 table.insert( list, [pos,] value )
     list : table    -- an array
-    pos  : integer  -- index where to insert (defaults to #list)
+    pos  : integer  -- index where to insert (defaults to #list+1)
     value: any      -- value to insert
 
 io.open( filename [, mode] )
